 - add argument "official" to function lang.country()
 - add function phoible.feature() for downloading PHOIBLE data
 - add function wals.feature() for downloading WALS data

lingtypology 1.0.5 (21
 - coloring bug corrected
 - add function autotyp.feature() for downloading AUTOTYP data
 - density estimation arguments works with independent features

lingtypology 1.0.4 (13.05.2017)
  - glottolog database is improved
  - added warning for languages without coordinates
  - label.hide option terned to TRUE
  - added density estimation visualization
  - transfered to ropensci

lingtypology 1.0.3 (14.04.2017)
  - improved spellchecker
  - added the argument for zoom panel appearence
  - added some official languages to the countries dataset
  - added instructions for using dplyr with lingtypology
  - glottolog databases are improved
  - added search by alternative language names to is.glottolog() function
  - makelink changed to make.url; link creation improved (Thanks  @languageSpaceLabs and @tzakharko for the comments)
  - added numeric features processing (Thanks  @languageSpaceLabs and @tzakharko for the comments)
  - map.orientation with values 'Pacific' and 'Atlantic' added (Thanks  @languageSpaceLabs and @tzakharko for the comments)

lingtypology 1.0.2 (23.02.2017)
  - ROpenSci wishes met
  - coloring the bug caused by leaflet new release fixed
  - added position arguments to every legend
  - added arguments for working with scale bar
  - added arguments for working with minimap
  - added arguments for working with labels
  - all changes are illustrated in package vigniette

lingtypology 1.0.1 (29.01.2017)
  - fixed all warnings in CRAN checks
  - fixed the bug with two feature set mapping
  - added map.feature arguments for legends (stroke.title, stroke.legend)
  - changed default for control argument to FALSE
  - corrected Rmd, examples and help
  - added image arguments
  - added the tile argument for layouts
  - added  the multiple tile argument