@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(afbo.feature)
 export(aff.lang)
 export(area.lang)
 export(autotyp.feature)
@@ -47,4 +48,6 @@ importFrom(stats,complete.cases)
 importFrom(stats,density)
 importFrom(stats,sd)
 importFrom(stringdist,stringdist)
+importFrom(utils,download.file)
 importFrom(utils,read.csv)
+importFrom(utils,unzip)
