@@ -1,6 +1,6 @@
 #' Download WALS data
 #'
-#' This function downloads data from WALS (http://wals.info). You need the internet connection.
+#' This function downloads data from WALS (http://wals.info) and changes language names to the names from lingtypology database. You need the internet connection.
 #'
 #' @param features A character vector that define with a feature ids from WALS (e. g. "1a", "21b").
 #' @param na.rm Logical. If TRUE function removes all languages not available in lingtypology database. By default is TRUE.
